src/test/ui/macros/macro_undefined.stderr
error: cannot find macro `k` in this scope
  --> $DIR/macro_undefined.rs:11:5
   |
LL |     macro_rules! kl {
   |     --------------- similarly named macro `kl` defined here
...
LL |     k!();
   |     ^ help: did you mean `kl`? (a similarly named macro)

error: aborting due to previous error

